# hubris

./: Cargo.toml
app/demo-stm32f4-nucleo/: Cargo.toml  README.md  app-f446.toml
app/demo-stm32f4-nucleo/src/: main.rs
app/gemini-bu/: app.toml
drv/stm32h7-spi-server/src/: main.rs
