[package]
edition = "2018"
readme = "README.md"
name = "demo-stm32f4-nucleo"
version = "0.1.0"

[features]
itm = ["panic-itm", "kern/klog-itm"]
semihosting = ["panic-semihosting", "kern/klog-semihosting"]

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.6.12"
panic-itm = { version = "0.4.1", optional = true }
panic-halt = { version = "0.2.0", optional = true }
panic-semihosting = { version = "0.5.3", optional = true }

[dependencies.stm32f4]
features = ["stm32f446", "rt"]
version = "0.13.0"
optional = true

[dependencies.kern]
path = "../../sys/kern"
default-features = false

[build-dependencies]
build-util = {path = "../../build/util"}

# this lets you use `cargo fix`!
[[bin]]
name = "demo-stm32f4-nucleo"
test = false
bench = false
